tdf#116473 'Export only note pages' should depend on 'Export notes pages'

Change-Id: Ib2a96464e5568eaf015368f24bc2739c29b098c0